--- a/AugTDDProject/pom.xml
+++ b/AugTDDProject/pom.xml
@@ -7,8 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<developers>
 		<developer>
-			<id>Juel</id>
-			<name>Juel</name>
+			<id>Brony</id>
+			<name>Brony</name>
 			<organization>TalenTech</organization>
 			<organizationUrl>http://www.talentech.com</organizationUrl>
 			<roles>
@@ -62,9 +62,12 @@
 				<version>2.21.0</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>UpsRegressionTest.xml</suiteXmlFile>
+					<!-- <suiteXmlFile>UpsRegressionTest.xml</suiteXmlFile> -->
 						<suiteXmlFile>UpsLoginTest.xml</suiteXmlFile>
-						<!-- <suiteXmlFile>UpsCrossBrowserTest.xml</suiteXmlFile> -->
+						<suiteXmlFile>UpsShippingTest.xml</suiteXmlFile>
+						<suiteXmlFile>UpsTrackingTest.xml</suiteXmlFile>
+
+						<suiteXmlFile>UpsCrossBrowserTest.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
